--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -7,8 +7,7 @@ jobs:
     timeout-minutes: 15
     steps:
       - name: Setup env
-        run: |
-          echo "REPO_NAME=${PWD##*/}" >> $GITHUB_ENV
+        run: echo "REPO_NAME=${PWD##*/}" >> $GITHUB_ENV
 
       - name: Checkout module
         uses: actions/checkout@v4
@@ -32,12 +31,10 @@ jobs:
         run: mv phpcs ..
 
       - name: Run CodeSniffer
-        run: |
-          ls
-          phpcs --standard=../phpcs/Backdrop --report=.github/misc/Github.php -n --basepath=. *
+        run: phpcs --standard=../phpcs/Backdrop --report=.github/misc/Github.php -n --basepath=. *
 
       - name: Install and run jshint
         if: ${{ always() }}
         run: |
-          sudo npm install -g jshint
+          sudo npm install --quiet -g jshint
           jshint --reporter=.github/misc/reporter.js js
