--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -15,6 +15,7 @@ jobs:
           php-version: 8.3
           # No composer, but we need our commandline tool.
           tools: none, phpcs
+          coverage: none
 
       # The checkout action refuses to put it outside, so we have to do it in
       # two steps.
@@ -22,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: backdrop-ops/phpcs
-          ref: 1.0.0-beta2
+          ref: 1.0.0
           path: phpcs
       - name: Move standard outside current dir
         run: mv phpcs ..
